# fractal-grow

./: .gitignore  LICENSE  README.md  compile_flags.txt  meson.build
config/: fractal-grow-cfg.toml
doc/: Algos-Trans.md  Fractal_Elements.drawio  Key_Functions.md  history.md  history.txt
docs/: algos-trans.md  history.md  index.md  installation.md  keyboard.md  modifications.md  running.md  screenshots.md
fonts/: LICENSE.txt
scripts/: PKGBUILD  install.sh  uninstall.sh
src/: aggreg.cpp  aggreg.h  autoscale.cpp  autoscale.h  aux_func.cpp  aux_func.h  basics.h  cfg_toml.cpp  cfg_toml.h  colors.cpp  colors.h  config.h.in  dbg_report.cpp  dbg_report.h  demo_func.cpp  demo_func.h  draw.cpp  fluctuate.cpp  fluctuate.h  fractal.h  frames_count.cpp  frames_count.h  garbage_coll.cpp  garbage_coll.h  light.cpp  light.h  logtxt.cpp  logtxt.h  main.cpp  match_col.cpp  match_col.h  mut_grow.cpp  mut_grow.h  opt_lyra.cpp  opt_lyra.h  pause_core.cpp  pause_core.h  picture.cpp  picture.h  progress.cpp  (+14 more)
subprojects/Lyra/: azure-pipelines.yml  meson.build
